// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input > renders with error state 1`] = `
<div
  class="w-full"
>
  <label
    class="mb-1.5 block text-[13px] font-medium text-slate-700 dark:text-slate-300"
    for="_r_2_"
  >
    Email
  </label>
  <input
    aria-describedby="_r_2_-error"
    aria-invalid="true"
    class="block w-full h-11 px-3.5 text-sm rounded-[12px] border bg-white text-slate-900 placeholder:text-slate-400 transition-[border-color,box-shadow] duration-150 focus:outline-none focus:ring-[3px] dark:bg-transparent dark:text-slate-100 dark:placeholder:text-slate-500 disabled:bg-slate-50 disabled:text-slate-400 disabled:cursor-not-allowed dark:disabled:bg-slate-800/50 border-red-500 focus:border-red-500 focus:ring-red-500/20 "
    id="_r_2_"
  />
  <p
    class="mt-1.5 text-xs font-medium text-red-600 dark:text-red-400"
    id="_r_2_-error"
    role="alert"
  >
    Geçersiz email adresi
  </p>
</div>
`;

exports[`Input > renders with helper text 1`] = `
<div
  class="w-full"
>
  <label
    class="mb-1.5 block text-[13px] font-medium text-slate-700 dark:text-slate-300"
    for="_r_1_"
  >
    Sifre
  </label>
  <input
    aria-describedby="_r_1_-helper"
    class="block w-full h-11 px-3.5 text-sm rounded-[12px] border bg-white text-slate-900 placeholder:text-slate-400 transition-[border-color,box-shadow] duration-150 focus:outline-none focus:ring-[3px] dark:bg-transparent dark:text-slate-100 dark:placeholder:text-slate-500 disabled:bg-slate-50 disabled:text-slate-400 disabled:cursor-not-allowed dark:disabled:bg-slate-800/50 border-slate-200 focus:border-honeywell-red focus:ring-honeywell-red/20 dark:border-slate-700 "
    id="_r_1_"
    type="password"
  />
  <p
    class="mt-1.5 text-xs text-slate-500 dark:text-slate-400"
    id="_r_1_-helper"
  >
    En az 8 karakter
  </p>
</div>
`;

exports[`Input > renders with label 1`] = `
<div
  class="w-full"
>
  <label
    class="mb-1.5 block text-[13px] font-medium text-slate-700 dark:text-slate-300"
    for="_r_0_"
  >
    Email
  </label>
  <input
    class="block w-full h-11 px-3.5 text-sm rounded-[12px] border bg-white text-slate-900 placeholder:text-slate-400 transition-[border-color,box-shadow] duration-150 focus:outline-none focus:ring-[3px] dark:bg-transparent dark:text-slate-100 dark:placeholder:text-slate-500 disabled:bg-slate-50 disabled:text-slate-400 disabled:cursor-not-allowed dark:disabled:bg-slate-800/50 border-slate-200 focus:border-honeywell-red focus:ring-honeywell-red/20 dark:border-slate-700 "
    id="_r_0_"
    placeholder="örnek@test.com"
  />
</div>
`;

exports[`Input > renders without label 1`] = `
<div
  class="w-full"
>
  <input
    class="block w-full h-11 px-3.5 text-sm rounded-[12px] border bg-white text-slate-900 placeholder:text-slate-400 transition-[border-color,box-shadow] duration-150 focus:outline-none focus:ring-[3px] dark:bg-transparent dark:text-slate-100 dark:placeholder:text-slate-500 disabled:bg-slate-50 disabled:text-slate-400 disabled:cursor-not-allowed dark:disabled:bg-slate-800/50 border-slate-200 focus:border-honeywell-red focus:ring-honeywell-red/20 dark:border-slate-700 "
    id="_r_3_"
    placeholder="Ara..."
  />
</div>
`;
